--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,3 @@
-# See https://help.github.com/ignore-files/ for more about ignoring files.
-
 # dependencies
 /node_modules
 
@@ -8,6 +6,12 @@
 
 # production
 /build
+
+# idea
+/.idea
+
+# api keys
+api_keys.js
 
 # misc
 .DS_Store
@@ -19,6 +23,3 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-
-# api keys
-api_keys.js
