--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material/linear-progress": "^0.40.1",
     "axios": "^0.18.0",
     "bootstrap": "^4.1.2",
     "jquery": "^3.3.1",
