--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "axios": "^0.18.0",
     "bootstrap": "^4.1.2",
     "jquery": "^3.3.1",
+    "materialize-css": "^1.0.0-rc.2",
     "popper.js": "^1.14.3",
     "prop-types": "^15.6.2",
     "react": "^16.4.1",
