--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "jquery": "^3.3.1",
+    "material-design-icons-iconfont": "^4.0.3",
     "materialize-css": "^1.0.0-rc.2",
     "prop-types": "^15.6.2",
     "react": "^16.4.1",
